--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the static_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.hero h1 {
+  margin-top:0;
+  padding-top: 250px;
+  font-family: 'Lato', sans-serif;
+  font-size:60px;
+  text-align: center;
+}
+.hero h2 {
+	font-family: 'Fira Sans', sans-serif;
+}
