--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -2,12 +2,17 @@
 @import url(http://fonts.googleapis.com/css?family=Lato);
 @import url(http://fonts.googleapis.com/css?family=Fira+Sans:300,400,500,700,300italic,400italic,500italic,700italic);
 
+body{
+  background-color: #ecf0f1;
+}
+
 .hero h1 {
   margin-top:0;
   padding-top: 250px;
   font-family: 'Lato', sans-serif;
   font-size:60px;
   text-align: center;
+  color: #7f8c8d;
 }
 .hero h2 {
   font-family: 'Fira Sans', sans-serif;
