color change because I have a raging headache

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -3,7 +3,7 @@
 @import url(http://fonts.googleapis.com/css?family=Fira+Sans:300,400,500,700,300italic,400italic,500italic,700italic);
 
 body{
-  background-color: #ecf0f1;
+  background-color: #7f8c8d;
 }
 
 .hero h1 {
@@ -12,7 +12,7 @@ body{
   font-family: 'Lato', sans-serif;
   font-size:60px;
   text-align: center;
-  color: #7f8c8d;
+  color: #ecf0f1;
 }
 .hero h2 {
   font-family: 'Fira Sans', sans-serif;
