--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -9,7 +9,7 @@ body{
 .hero h1 {
   margin-top:0;
   padding-top: 250px;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size:60px;
   text-align: center;
   color: #ecf0f1;
