--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -6,9 +6,13 @@ body{
   background-color: #7f8c8d;
 }
 
+.hero {
+  margin-top:25%;
+}
+
 .hero h1 {
   margin-top:0;
-  padding-top: 250px;
+  /*padding-top: 250px;*/
   font-family: 'Raleway', sans-serif;
   font-size:60px;
   text-align: center;
