--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -21,3 +21,19 @@ body{
 .hero h2 {
   font-family: 'Fira Sans', sans-serif;
 }
+
+.hero2 {
+  margin-top:25%;
+}
+
+.hero2 h1 {
+  margin-top:0;
+  /*padding-top: 250px;*/
+  font-family: 'Raleway', sans-serif;
+  font-size:60px;
+  text-align: center;
+  color: #ecf0f1;
+}
+.hero2 h2 {
+  font-family: 'Fira Sans', sans-serif;
+}
