--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -18,6 +18,14 @@ body{
   text-align: center;
   color: #ecf0f1;
 }
+.hero h3{
+  margin-top:0;
+  font-family: sans-serif;
+  font-size:60px;
+  text-align: center;
+  color: #ecf0f1;
+}
+
 .hero h2 {
   font-family: 'Fira Sans', sans-serif;
 }
