--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,6 +1,5 @@
 <div class="col-xs-12 hero text-center">
-<h1>A different way to review stuff.</h1>
-<h3><strong>A different way to review stuff.</strong></h3>
+<h1>A different way to review.</h1>
 <br>
 <h2>Coming soon.</h2>
 </div>
