--- a/app/views/admin/dashboards/show.html.erb
+++ b/app/views/admin/dashboards/show.html.erb
@@ -1,1 +1,5 @@
-<h1>hi</h1>
+<% Category.all.each do |t| %>
+
+  <h3>New <%= link_to "#{t.name}", new_admin_category_post_path(t) %> post</h3>
+
+<% end %>
