--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,16 +14,16 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
        <ul class="nav navbar-nav navbar-right">
-        <% if user_signed_in? %>
-          <li><%= link_to "Welcome, #{current_user.email}" %></li>
-          <% if current_user.admin? %>
-            <li><%= link_to "Admin Area", admin_dashboard_path %></li>
-          <% end %>
-          <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
-          <% else %>
-          <li><%= link_to 'Sign in', new_user_session_path %></li>
-          <li><%= link_to 'Sign up', new_user_registration_path %></li>
-          <% end %>
+         <% if user_signed_in? %>
+         <li><%= link_to "Welcome, #{current_user.email}", backsies_path %></li>
+         <% if current_user.admin? %>
+         <li><%= link_to "Admin Area", admin_dashboard_path %></li>
+         <% end %>
+         <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
+         <% else %>
+         <li><%= link_to 'Sign in', new_user_session_path %></li>
+         <li><%= link_to 'Sign up', new_user_registration_path %></li>
+         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
