posts belong_to user, beginning UD of CRUD

--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,5 +1,11 @@
+<style type="text/css">
+.showme{
+  border: 1px solid black;
+}
 
-<div>
+</style>
+
+<div class="showme">
   <h1><%= @post.name.titleize %> </h1>
   <h2><%= link_to @post.category.name.titleize, category_posts_path(@post.category) %></h2>
   <%= @post.review %><br></center>
