--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -5,7 +5,7 @@
 
 </style>
 
-<div class="showme">
+<div class="showme col-xs-10 col-xs-offset-1">
   <h1><%= @post.name.titleize %> </h1>
   <h2><%= link_to @post.category.name.titleize, category_posts_path(@post.category) %></h2>
   <%= @post.review %><br></center>
